--- a/SeleniumSpecFlow/TestResults/Report/index.html
+++ b/SeleniumSpecFlow/TestResults/Report/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">11/29/2020 10:38:00 AM</span>
+                    <span class="badge badge-primary">11/29/2020 11:57:35 AM</span>
                 </a>
             </li>
         </ul>
@@ -119,8 +119,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Automation Practice Test Scenarios</p> 
-								<p class="duration text-sm">0h:0m:23s+582ms</p> 
-								<span class="datetime">10:38:00 AM</span>
+								<p class="duration text-sm">0h:0m:23s+547ms</p> 
+								<span class="datetime">11:57:35 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -128,9 +128,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-fail">Automation Practice Test Scenarios</h5>
-										<span class='badge badge-success'>11/29/2020 10:38:00 AM</span>
-										<span class='badge badge-danger'>11/29/2020 10:38:23 AM</span>
-										<span class='badge badge-default'>0h:0m:23s+582ms</span>
+										<span class='badge badge-success'>11/29/2020 11:57:35 AM</span>
+										<span class='badge badge-danger'>11/29/2020 11:57:59 AM</span>
+										<span class='badge badge-default'>0h:0m:23s+547ms</span>
 									</div>
 																	</div>
 							</div>
@@ -154,7 +154,7 @@
                                 <span>When User logged into application</span>
                             </div>
 			<div class="details"></div>
-			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp546D.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp546D.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp546D.png'></span>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp2F1F.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp2F1F.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp2F1F.png'></span>
                             <div class="d-flex align-items-center justify-content-start when" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
@@ -162,7 +162,7 @@
                                 <span>When I select Order history and details</span>
                             </div>
 			<div class="details"></div>
-			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp5EBF.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp5EBF.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp5EBF.png'></span>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp3AD8.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp3AD8.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp3AD8.png'></span>
                             <div class="d-flex align-items-center justify-content-start when" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
@@ -170,7 +170,7 @@
                                 <span>When I select a random order from existing orders</span>
                             </div>
 			<div class="details"></div>
-			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp60E2.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp60E2.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp60E2.png'></span>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp3CEC.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp3CEC.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp3CEC.png'></span>
                             <div class="d-flex align-items-center justify-content-start then" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
@@ -178,7 +178,7 @@
                                 <span>Then I validate order details</span>
                             </div>
 			<div class="details"></div>
-			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp6410.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp6410.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp6410.png'></span>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp41B0.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp41B0.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp41B0.png'></span>
                             <div class="d-flex align-items-center justify-content-start when" title="">
                                 <span class="alert-icon pass-bg">
                                     <i class="fa fa-check text-white"></i>
@@ -186,7 +186,7 @@
                                 <span>When I enter a message</span>
                             </div>
 			<div class="details"></div>
-			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp6E23.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp6E23.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp6E23.png'></span>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp4B94.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp4B94.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp4B94.png'></span>
                             <div class="d-flex align-items-center justify-content-start then" title="">
                                 <span class="alert-icon fail-bg">
                                     <i class="fa fa-times text-white"></i>
@@ -195,9 +195,9 @@
                             </div>
 			<div class="details">Expected string length 13 but was 10. Strings differ at index 0.
   Expected: "Wrong Message"
-  But was:  "1PH6MAY9AZ"
+  But was:  "AIOM3TTEOZ"
   -----------^</div>
-			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp73F0.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp73F0.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp73F0.png'></span>
+			<span class="badge badge-primary"><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp52B9.png' src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp52B9.png' data-src='C:\Bijay Tests\Selenium\SeleniumSpecFlow\SeleniumSpecFlow\TestResults\Img\tmp52B9.png'></span>
                     </div>
 				</div>
 	</div>
@@ -332,7 +332,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">11/29/2020 10:38:00 AM</h6>
+							<h6 class="font-weight-light">11/29/2020 11:57:35 AM</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -348,7 +348,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:23.6207355</h6>
+							<h6 class="font-weight-light">00:00:23.5874824</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
